@@ -1,16 +1,15 @@
-# Copyright 2004 Ian Leitch
-# Copyright 2004 Scott Hadfield
-# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Copyright 2004-2005 Ian Leitch
+# Copyright 2004-2005 Scott Hadfield
+# Copyright 1999-2005 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Language.py,v 1.5 2005/01/26 22:22:20 port001 Exp $
-#
 
-__modulename__ = "Language"
+__revision__ = '$Id: Language.py,v 1.6 2005/01/27 04:19:15 port001 Exp $'
+__modulename__ = 'Language'
 
 import Config
-from Error import error
 from GLSRBackend import GLSRBackend as Parent
+from GLSRException import LanguageModuleError
 
 class Language(Parent):
 
@@ -31,5 +30,4 @@ class Language(Parent):
             return results["%s_name" % self.tablename]
         
         else:
-            error("Invalid User ID!", __modulename__)
-            return False
+            raise LanguageModuleException('Invalid user ID')
