@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.48 2005/01/27 02:01:54 port001 Exp $
+# $Id: ChangeLog,v 1.49 2005/01/27 04:19:15 port001 Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
@@ -10,6 +10,10 @@ CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 rewrite, but somehow worked. 
 
 27 Jan 2005; Ian Leitch <port001@gentoo.org>:
+ * Modules now raise exceptions instead of calling error()
+   Exception handling is done in GLSRException.py thus index.py no longer
+   needed the try/except block.
+ * Clean ups
  * Use os.abort() as sys.exit() raises a SystemExit which doesn't
    play nice with our code.
  * No longer print exceptions for raised errors, the stack only contains
